{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 75,
  "lineage": "cd008b09-25ba-c08e-7848-2be63b2ec4b6",
  "resources": [
    {
      "module": "module.secgroup",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:382711225776:security-group/sg-08d449daadb1ef2e3",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-08d449daadb1ef2e3",
            "ingress": [],
            "name": "windows_sg",
            "name_prefix": "",
            "owner_id": "382711225776",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-068b0b1b3745420bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.vpc_igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.secgroup_egress",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1358820489",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-08d449daadb1ef2e3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.secgroup.aws_security_group.sec_group",
            "module.vpc.aws_internet_gateway.vpc_igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.secgroup_ingress",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3063480588",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08d449daadb1ef2e3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.secgroup.aws_security_group.sec_group",
            "module.vpc.aws_internet_gateway.vpc_igw",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-2106698737",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08d449daadb1ef2e3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.secgroup.aws_security_group.sec_group",
            "module.vpc.aws_internet_gateway.vpc_igw",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3389,
            "id": "sgrule-943311047",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08d449daadb1ef2e3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3389,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.secgroup.aws_security_group.sec_group",
            "module.vpc.aws_internet_gateway.vpc_igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_public",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:382711225776:route-table/rtb-087a227918cdbb106",
            "id": "rtb-087a227918cdbb106",
            "owner_id": "382711225776",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-064d921d48c0d2929",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-068b0b1b3745420bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.vpc_igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_public",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rtb_assossiation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b72299a9f5a2d0af",
            "route_table_id": "rtb-087a227918cdbb106",
            "subnet_id": "subnet-089308594280eff01"
          },
          "dependencies": [
            "module.subnet_public.aws_route_table.public_rtb",
            "module.subnet_public.aws_subnet.public_subnets",
            "module.vpc.aws_internet_gateway.vpc_igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_public",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:382711225776:subnet/subnet-089308594280eff01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089308594280eff01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "382711225776",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-068b0b1b3745420bc"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.vpc_igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:382711225776:internet-gateway/igw-064d921d48c0d2929",
            "id": "igw-064d921d48c0d2929",
            "owner_id": "382711225776",
            "vpc_id": "vpc-068b0b1b3745420bc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:382711225776:vpc/vpc-068b0b1b3745420bc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-0ac8d43b99310ceac",
            "default_route_table_id": "rtb-047121a04c3cb1e50",
            "default_security_group_id": "sg-0969627e5218704eb",
            "dhcp_options_id": "dopt-057880f09fa02e6fb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-068b0b1b3745420bc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-047121a04c3cb1e50",
            "owner_id": "382711225776"
          }
        }
      ]
    },
    {
      "module": "module.windows_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "windows-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007e9b087978ff791",
            "arn": "arn:aws:ec2:sa-east-1:382711225776:instance/i-05cbea1e5db5dc455",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05cbea1e5db5dc455",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "windows-key-pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d2ca8779fc09ba35",
            "private_dns": "ip-10-0-1-120.sa-east-1.compute.internal",
            "private_ip": "10.0.1.120",
            "public_dns": "ec2-54-232-158-193.sa-east-1.compute.amazonaws.com",
            "public_ip": "54.232.158.193",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:sa-east-1:382711225776:key/e62ba301-1c89-42b0-806f-56df0f7407ef",
                "throughput": 0,
                "volume_id": "vol-02d2dd280d1fc650a",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-089308594280eff01",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08d449daadb1ef2e3"
            ]
          },
          "dependencies": [
            "module.keys_pair.aws_key_pair.key_pair",
            "module.keys_pair.tls_private_key.key_pair",
            "module.secgroup.aws_security_group.sec_group",
            "module.subnet_public.aws_route_table.public_rtb",
            "module.subnet_public.aws_route_table_association.public_rtb_assossiation",
            "module.subnet_public.aws_subnet.public_subnets",
            "module.vpc.aws_internet_gateway.vpc_igw",
            "module.vpc.aws_vpc.vpc",
            "module.windows_instance.data.aws_ami.windows-2019",
            "module.windows_instance.data.template_file.windows-userdata"
          ]
        }
      ]
    }
  ]
}